--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="public/css/bootstrap.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>   
     <link rel="stylesheet" href="public/css/style.css">
     <link rel="icon" href="public/img/icon.jpg">
 
@@ -56,14 +57,14 @@
             <article>
                 <h2>El mito detras del auto</h2>
                 <h5>Martin Almada 27/11/23</h5>
-                <img src="public/img/skyimg.jpg" alt="">
+                <a href="#"><img src="public/img/skyimg.jpg" alt=""></a>
                 <p>El creador del nombre de Godzilla fue la prensa australiana. Esta portada de la revista «wheels» sería la primera vez que se podría ver en una publicación pero en las retransmisiones era frecuente escuchar la referencia al monstruo mitológico japonés</p>
                 <a href="https://garagedreams.net/car-facts/why-is-the-gtr-called-godzilla" target="_blank" class="readmore">Fuente</a>
             </article>
             <article>
                 <h2>Situado en la altura</h2>
                 <h5>Martin Almada 27/11/23</h5>
-                <img src="public/img/sky2img.jpg" alt="">
+                <a href="" class="image"><img src="public/img/sky2img.jpg" alt=""></a>
                 <p>De las 100 unidades del GT-R R32 que Nissan destinó al mercado australiano, tan solo se vendieron 63. Su exorbitado precio proteccionista con los productos nacionales (110.000$) lo situaba a la altura de otros deportivos con más «renombre» aunque fuesen mucho menos efectivos en los circuitos</p>
                 <a href="https://talkmotorsport.co.nz/nzcircuit/win-on-sunday-sell-on-mondaythe-story-of-nissans-extraordinary-bnr32-skyline-gt-r-pt-1/" target="_blank" class="readmore">Fuente</a>
             </article>
