--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <article>
                 <h2>El mito detras del auto</h2>
                 <h5>Martin Almada 27/11/23</h5>
-                <a href="#"><img src="public/img/skyimg.jpg" alt=""></a>
+                <a href="#" class="image"><img src="public/img/sky3img.png" alt=""></a>
                 <p>El creador del nombre de Godzilla fue la prensa australiana. Esta portada de la revista «wheels» sería la primera vez que se podría ver en una publicación pero en las retransmisiones era frecuente escuchar la referencia al monstruo mitológico japonés</p>
                 <a href="https://garagedreams.net/car-facts/why-is-the-gtr-called-godzilla" target="_blank" class="readmore">Fuente</a>
             </article>
